--- a/configs/client/config.yml
+++ b/configs/client/config.yml
@@ -1,4 +1,8 @@
 host: "localhost:5005"
-metrics_host: "localhost:8428/api/v1/import/prometheus"
 exploit_dir: "exploits"
 grpc_auth_key: "s3cret_t0ken_pls_d0nt_leak"
+
+metrics:
+  url: "localhost:8428/api/v1/import/prometheus"
+  user: "admin"
+  password: "1234"
