--- a/front/package.json
+++ b/front/package.json
@@ -25,11 +25,13 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
-    "react-window": "^1.8.9"
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
